--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "tech-stack-icons": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
